...
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@+id/topRectangle"
            app:layout_constraintTop_toTopOf="@+id/topRectangle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/glass"
...
            app:layout_constraintTop_toTopOf="@+id/searchRectangle"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TouchTargetSizeCheck" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicine_rv"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topRectangle"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/queryText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
...
            app:layout_constraintStart_toStartOf="@+id/topRectangle"
            app:layout_constraintTop_toTopOf="@+id/topRectangle"
            app:layout_constraintVertical_bias="0.876"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/openSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/yellow"
            android:clickable="true"
...
